[package]
name = "audec"
version = "0.1.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Automatic decompression"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["compression"]
categories = ["compression"]
repository = "https://github.com/a-maier/audec"

[dependencies]
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
log = "0.4"
lz4 = { version = "1.24", optional = true }
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

[features]
default = ["zlib-ng", "zstd"]
zlib-ng = ["flate2/zlib-ng"]